bk_ida/gccida/g0/initialize_argument_information
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1587:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree_value; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1588:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1591:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1592:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1598:5: error: expected ';' after expression
tree var; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1598:6: error: use of undeclared identifier 'var'
tree var; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1600:5: error: expected ';' after expression
tree v25; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1600:6: error: use of undeclared identifier 'v25'
tree v25; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1602:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1604:5: error: expected ';' after expression
tree inc_0; // [rsp+40h] [rbp-50h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1604:6: error: use of undeclared identifier 'inc_0'
tree inc_0; // [rsp+40h] [rbp-50h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1606:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+4Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1609:5: error: expected ';' after expression
tree type; // [rsp+60h] [rbp-30h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1609:6: error: use of undeclared identifier 'type'
tree type; // [rsp+60h] [rbp-30h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1610:5: error: expected ';' after expression
tree p; // [rsp+68h] [rbp-28h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1610:6: error: use of undeclared identifier 'p'
tree p; // [rsp+68h] [rbp-28h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1627:1: error: use of undeclared identifier 'p'
p = actparms; 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1629:9: error: use of undeclared identifier 'p'
while ( p ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/calls.c:1631:1: error: use of undeclared identifier 'type'
type = *( tree *)( p->int_cst.int_cst.low + 8); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/initialize_argument_information/src/obj/calls.o] Error 1
